ash: Use legacy size for legacy logout button.

BUG=654803

Review-Url: https://codereview.chromium.org/2414533002
Cr-Commit-Position: refs/heads/master@{#424750}

Former-commit-id: 6f35d15d1ad0fa7a5f87f5ad47d4fc33aa695d66